--- a/1b1d54101994416abf68c4830f800485.opf/meta.yml
+++ b/1b1d54101994416abf68c4830f800485.opf/meta.yml
@@ -1,9 +1,10 @@
 id: 1b1d54101994416abf68c4830f800485
 initial_creation_type: ocr
 source_metadata:
-  001c547ff1664c6fa7f5e1501ee1b66e:
-    base_file: v060.txt
-    image_group_id: I1PD95906
-    title: ''
-    total_pages: 1877
-    volume_number: 61
+  volumes:
+    001c547ff1664c6fa7f5e1501ee1b66e:
+      base_file: v060.txt
+      image_group_id: I1PD95906
+      title: ''
+      total_pages: 1877
+      volume_number: 61
